updated visibility classes to fall back to display inherit instead of block. This fixes #887

--- a/scss/foundation/components/modules/_ui.scss
+++ b/scss/foundation/components/modules/_ui.scss
@@ -34,12 +34,12 @@
   .hide-for-large-up,
   .show-for-xlarge { display: none !important; }
 
-  .hide-for-xlarge,
-  .show-for-large,
-  .show-for-large-up,
   .hide-for-small,
   .hide-for-medium,
-  .hide-for-medium-down { display: block !important; }
+  .hide-for-medium-down,
+  .show-for-large,
+  .show-for-large-up,
+  .hide-for-xlarge { display: inherit !important; }
 
   /* Very large display targeting */
   @media only screen and (min-width: $screenXlarge) {
@@ -48,7 +48,7 @@
     .hide-for-medium-down,
     .hide-for-large,
     .show-for-large-up,
-    .show-for-xlarge { display: block !important; }
+    .show-for-xlarge { display: inherit !important; }
 
     .show-for-small,
     .show-for-medium,
@@ -65,7 +65,7 @@
     .show-for-medium-down,
     .hide-for-large,
     .hide-for-large-up,
-    .hide-for-xlarge { display: block !important; }
+    .hide-for-xlarge { display: inherit !important; }
 
     .show-for-small,
     .hide-for-medium,
@@ -82,7 +82,7 @@
     .show-for-medium-down,
     .hide-for-large,
     .hide-for-large-up,
-    .hide-for-xlarge { display: block !important; }
+    .hide-for-xlarge { display: inherit !important; }
 
     .hide-for-small,
     .show-for-medium,
@@ -94,28 +94,28 @@
 
   /* Orientation targeting */
   .show-for-landscape,
-  .hide-for-portrait { display: block !important; }
+  .hide-for-portrait { display: inherit !important; }
   .hide-for-landscape,
   .show-for-portrait { display: none !important; }
 
   @media screen and (orientation: landscape) {
     .show-for-landscape,
-    .hide-for-portrait { display: block !important; }
+    .hide-for-portrait { display: inherit !important; }
     .hide-for-landscape,
     .show-for-portrait { display: none !important; }
   }
 
   @media screen and (orientation: portrait) {
     .show-for-portrait,
-    .hide-for-landscape { display: block !important; }
+    .hide-for-landscape { display: inherit !important; }
     .hide-for-portrait,
     .show-for-landscape { display: none !important; }
   }
 
   /* Touch-enabled device targeting */
   .show-for-touch { display: none !important; }
-  .hide-for-touch { display: block !important; }
-  .touch .show-for-touch { display: block !important; }
+  .hide-for-touch { display: inherit !important; }
+  .touch .show-for-touch { display: inherit !important; }
   .touch .hide-for-touch { display: none !important; }
 
   /* Specific overrides for elements that require something other than display: block */
